--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "get-erc20-balance",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "This package allows getting balance of any given erc20 contract for any given wallet address using “balanceOf” method of ERC20 contract on any Ethereum chain.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DmitryPaninModsen/get-erc20-balance.git"
@@ -18,7 +21,8 @@
   "scripts": {
     "test": "jest",
     "test:cov": "jest --coverage",
-    "build": "tsup ./src/index.ts --format cjs,esm --dts"
+    "build": "tsup ./src/index.ts --format cjs,esm --dts",
+    "prepublish": "tsup ./src/index.ts --format cjs,esm --dts"
   },
   "dependencies": {
     "ethers": "^6.3.0"
